# BlueZoo

./: .gitignore  .restyled.yaml  CONTRIBUTING.md  INTERFACES.md  README.md  pyproject.toml  tox.ini
.github/: dependabot.yaml
.github/workflows/: check.yaml  conformance.yaml  publish.yaml  restyled.yaml
bluezoo/: __init__.py  adapter.py  bluezoo.py  controller.py  device.py  events.py  exceptions.py  helpers.py  log.py  root.py  service.py  utils.py
bluezoo/adv/: manager.py
bluezoo/gatt/: __init__.py  application.py  characteristic.py  descriptor.py  manager.py  profile.py  service.py
bluezoo/interfaces/: Adapter.py  Agent.py  AgentManager.py  Device.py  GattCharacteristic.py  GattDescriptor.py  GattManager.py  GattProfile.py  GattService.py  LEAdvertisement.py  LEAdvertisingManager.py  Media.py  MediaEndpoint.py  __init__.py
bluezoo/media/: __init__.py  endpoint.py  manager.py
scripts/: bluez-errors.py  bluez-interfaces.py  demo.py
tests/: test_client.py  test_manager.py  test_utils.py
tests/gatt/: advertise.py  server.py
